@@ -10,6 +10,7 @@
     * SessionError when not possible to decode session
     * JSONResponse and JSONGeneratorResponse without charset
     * CORS and Security example for OpenAPI
+    * EmptyResponse don't use headers warning
 
 ==== 2.2.0 ====
     * openapi after_request example fix
